[package]
name = "slots"
version = "0.3.0"
license = "MIT"
homepage = "https://github.com/bugadani/Slots"
description = "Fixed size data structure with constant-time operations"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2018"
categories = [
    "data-structures",
    "no-std"
]
exclude = [
    ".github/*",
]

[dependencies]
generic-array = "0.14.1"

[features]
runtime_checks = []
default = ["runtime_checks"]
