[package]
name = "slots"
version = "0.4.0"
license = "MIT"
repository = "https://github.com/bugadani/Slots"
description = "Fixed size data structure with constant-time operations"
authors = ["Dániel Buga <bugadani@gmail.com>"]
edition = "2021"
categories = [
    "data-structures",
    "no-std"
]
exclude = [
    ".github/*",
]

[dependencies]
array-init = "2"

[features]
runtime_checks = []
default = ["runtime_checks"]
